fix the wrong height of the sourcelist

--- a/css/layout.css
+++ b/css/layout.css
@@ -193,6 +193,7 @@ margin-left:70px;
 }
 
 /* weibo part*/
+.weibo_content{overflow:hidden;}
 #source_pane{position:fixed; top:70px; width:390px; height:800px; }
 #story_pane{width:510px; min-height: 754px;}
 #source_list{height:665px; overflow:auto; padding:0; margin:0; border: 1px solid #C9C9C9; border-top: none; border-radius:5px 5px 5px 5px;}
